--- a/user/templates/user_base.html
+++ b/user/templates/user_base.html
@@ -6,8 +6,31 @@
               rel="stylesheet"
               integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
               crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{{url_for('usr.static', filename='css/style.css')}}">
     </head>
-    <body>
+    <body style="background-color: #DDD">
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item ms-1">
+                      <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item ms-5">
+                      <a class="nav-link" href="#">Profile page</a>
+                    </li>
+                  </ul>
+            </div>
+            </div>
+        </nav>
+
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col ms-4 mt-3">{% block content1 %}{% endblock %}</div>
+                <div class="col ms-5 mt-5">{% block content2 %}{% endblock %}</div>
+            </div>
+        </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
