--- a/admin/templates/admin_base.html
+++ b/admin/templates/admin_base.html
@@ -6,9 +6,28 @@
               rel="stylesheet"
               integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
               crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{{url_for('admin.static', filename='css/style.css')}}">
     </head>
-    <body>
-
+    <body style="background-color: #4da6ff">
+        <nav class="navbar navbar-expand-lg navbar-color">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item ms-1">
+                      <a class="nav-link navbar-link-color" href="#">Home</a>
+                    </li>
+                    <li class="nav-item ms-5">
+                      <a class="nav-link navbar-link-color" href="#">Users</a>
+                    </li>
+                    <li class="nav-item ms-5 ">
+                      <a class="nav-link navbar-link-color" href="#">Voting</a>
+                    </li>
+                  </ul>
+            </div>
+            </div>
+        </nav>
+        {% block content %}{% endblock %}
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
