# Define href for pages

--- a/admin/templates/admin_newvoting.html
+++ b/admin/templates/admin_newvoting.html
@@ -1,5 +1,6 @@
 {% extends 'admin_base.html' %}
 {% block title%}Admin home{% endblock %}
+{% block active_vote %}active{% endblock %}
 {% block content %}
     <div class="container mt-4">
         <div class="col">
