--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,5 +1,6 @@
 {% extends 'home_base.html' %}
 {% block title%}Home{% endblock %}
+{% block active_home%}active{% endblock %}
 {% block content %}
     <h1 class="overlay-text">Home</h1>
 {% endblock %}
