--- a/home/templates/register.html
+++ b/home/templates/register.html
@@ -1,5 +1,6 @@
 {% extends 'home_base.html' %}
 {% block title%}Home{% endblock %}
+{% block active_register%}active{% endblock %}
 {% block content %}
     <div class="container">
         <div class="col"></div>
