--- a/admin/templates/admin_base.html
+++ b/admin/templates/admin_base.html
@@ -14,13 +14,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item ms-1">
-                      <a class="nav-link navbar-link-color" href="#">Home</a>
+                      <a class="nav-link navbar-link-color {% block active_admin_home %}{% endblock %}" href="/admin/">Home</a>
                     </li>
                     <li class="nav-item ms-5">
-                      <a class="nav-link navbar-link-color" href="#">Users</a>
+                      <a class="nav-link navbar-link-color {% block active_vote %}{% endblock %}" href="/admin/users">Users</a>
                     </li>
                     <li class="nav-item ms-5 ">
-                      <a class="nav-link navbar-link-color" href="#">Voting</a>
+                      <a class="nav-link navbar-link-color {% block active_users %}{% endblock %}" href="/admin/voting">Voting</a>
                     </li>
                   </ul>
             </div>
