--- a/admin/templates/admin_home.html
+++ b/admin/templates/admin_home.html
@@ -1,5 +1,6 @@
 {% extends 'admin_base.html' %}
 {% block title%}Admin home{% endblock %}
+{% block active_admin_home %}active{% endblock %}
 {% block content %}
     <h1 class="overlay-text">Admin home</h1>
 {% endblock %}
