--- a/admin/templates/admin_users.html
+++ b/admin/templates/admin_users.html
@@ -1,5 +1,6 @@
 {% extends 'admin_base.html' %}
 {% block title%}All user{% endblock %}
+{% block active_users %}active{% endblock %}
 {% block content %}
     <div class="container">
         <div class="column">
