--- a/home/templates/home_base.html
+++ b/home/templates/home_base.html
@@ -14,13 +14,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item ms-1">
-                      <a class="nav-link" href="#">Home</a>
+                      <a class="nav-link {% block active_home %}{% endblock %}" href="/home/">Home</a>
                     </li>
                     <li class="nav-item ms-5">
-                      <a class="nav-link" href="#">Login</a>
+                      <a class="nav-link {% block active_login %}{% endblock %}" href="/home/login">Login</a>
                     </li>
                     <li class="nav-item ms-5">
-                      <a class="nav-link" href="#">Register</a>
+                      <a class="nav-link {% block active_register %}{% endblock %}" href="/home/register">Register</a>
                     </li>
                   </ul>
             </div>
