--- a/user/templates/user_base.html
+++ b/user/templates/user_base.html
@@ -15,10 +15,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item ms-1">
-                      <a class="nav-link" href="#">Home</a>
+                      <a class="nav-link" href="/home/">Home</a>
                     </li>
                     <li class="nav-item ms-5">
-                      <a class="nav-link" href="#">Profile page</a>
+                      <a class="nav-link active" href="#">Profile page</a>
                     </li>
                   </ul>
             </div>
