# Implement user registration and login with sessions
- Introduced session management to track user registration and login status
- Added methods for user registration and login
- Personalized user page by displaying user's name in the title

--- a/user/templates/user_home.html
+++ b/user/templates/user_home.html
@@ -1,7 +1,7 @@
 {% extends 'user_base.html' %}
 {% block title%}Profile page{% endblock %}
 {% block content1 %}
-    <h1>Welcome 'user'!</h1>
+    <h1>Welcome {{username}}!</h1>
     <form>
         <div class="row">
             <label for="email-input" class="form-label">Change your email address:</label>
