--- a/home/templates/login.html
+++ b/home/templates/login.html
@@ -6,14 +6,14 @@
         <div class="col"></div>
         <div class="col justify-content-md-center">
             <h1>Login</h1>
-            <form>
+            <form action="#" method="POST">
               <div class="row">
                 <label for="username-input" class="form-label">User name</label>
-                <input type="text" class="form-control" id="username-input">
+                <input type="text" class="form-control" id="username-input" name="usr_name">
               </div>
               <div class="row">
                 <label for="password-input" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password-input">
+                <input type="password" class="form-control" id="password-input" name="usr_password">
               </div>
               <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="checkbox">
