# Implement user logout with session management
- Added logout route in home blueprint
- Enables users to log out and redirects to the home page
- Utilized session management for maintaining user state

--- a/user/templates/user_home.html
+++ b/user/templates/user_home.html
@@ -13,6 +13,9 @@
         </div>
         <button type="submit" class="btn btn-primary mt-3">Change email</button>
     </form>
+    <div class="container mt-2">
+        <a class="btn btn-danger" href="/home/logout/{{username}}/{{password}}/{{email}}" role="button">Log out</a>
+    </div>
 {% endblock %}
 {% block content2 %}
     <h3>'Voting for something'</h3>
