--- a/admin/templates/admin_base.html
+++ b/admin/templates/admin_base.html
@@ -22,6 +22,9 @@
                     <li class="nav-item ms-5 ">
                       <a class="nav-link navbar-link-color {% block active_users %}{% endblock %}" href="/admin/voting">Voting</a>
                     </li>
+                      <li class="nav-item ms-5 ">
+                      <a class="btn btn-danger" role="button" href="/home/">Log out</a>
+                    </li>
                   </ul>
             </div>
             </div>
