--- a/user/templates/user_home.html
+++ b/user/templates/user_home.html
@@ -14,7 +14,7 @@
         <button type="submit" class="btn btn-primary mt-3">Change email</button>
     </form>
     <div class="container mt-2">
-        <a class="btn btn-danger" href="/home/logout/{{username}}/{{password}}/{{email}}" role="button">Log out</a>
+        <a class="btn btn-danger" href="/home/logout" role="button">Log out</a>
     </div>
 {% endblock %}
 {% block content2 %}
