--- a/admin/templates/admin_users.html
+++ b/admin/templates/admin_users.html
@@ -12,18 +12,16 @@
                 <div class="col text-start font-color">Username:</div>
                 <div class="col text-start font-color">Email:</div>
                 <div class="col text-start font-color">          </div>
-                <div class="row ms-1 mt-4">
-                    <div class="col text-start font-color">'01'</div>
-                    <div class="col text-start font-color">'David'</div>
-                    <div class="col text-start font-color">'David@email.com'</div>
-                    <div class="col text-start font-color"><a class="btn btn-danger" href="#" role="button">Delete</a></div>
-                </div>
-                <div class="row ms-1 mt-3">
-                    <div class="col text-start font-color">'02'</div>
-                    <div class="col text-start font-color">'Jack'</div>
-                    <div class="col text-start font-color">'Jack@email.com'</div>
-                    <div class="col text-start font-color"><a class="btn btn-danger" href="#" role="button">Delete</a></div>
-                </div>
+                {% with i = 0 %}
+                {% for user in all_user %}
+                    <div class="row {% if i==0 %}mt-1{% else %}mt-3{% endif %} mt-4">
+                        <div class="col text-start font-color">{{user._id}}</div>
+                        <div class="col text-start font-color">{{user.name}}</div>
+                        <div class="col text-start font-color">{{user.email}}</div>
+                        <div class="col text-start font-color"><a class="btn btn-danger" href="/home/admin_delete/{{user._id}}" role="button">Delete</a></div>
+                    </div>
+                {% endfor %}
+                {% endwith %}
             </div>
         </div>
     </div>
